--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,30 +1,30 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+ViewData["Title"] = "Home Page";
 }
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>GURPS Client</title>
 </head>
-<body class = "colorTest">
 
-        <div class="cAdjust">
-        </div>
-    <div class="wrapper">
+<body class="colorTest">
+    <div class="container d-flex">
         <div>
-        <img src="../images/colortest1.jpeg"/>
-        <img src="../images/colortest2.jpeg"/>
-        <img src="../images/colortest3.jpeg"/>
-        <img src="../images/colortest4.jpeg"/>
+            <img class="img-fluid w-100" src="../images/colortest1.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest2.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest3.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest4.jpeg" />
         </div>
-        <div class= "cAdjust" >
-        <img src="../images/colortest1.jpeg"/>
-        <img src="../images/colortest2.jpeg"/>
-        <img src="../images/colortest3.jpeg"/>
-        <img src="../images/colortest4.jpeg"/>
+        <div class="cAdjust">
+            <img class="img-fluid w-100" src="../images/colortest1.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest2.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest3.jpeg" />
+            <img class="img-fluid w-100" src="../images/colortest4.jpeg" />
         </div>
     </div>
 </body>
+
 </html>
