--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,68 +9,73 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
 </head>
-<body>
-    <audio id = "turnOnSound" autoplay>
-      <source src="../images/turnOn.mp3" type="audio/mpeg">
-</audio>
-<audio id = "turnOffSound">
-      <source src="../images/turnOff.mp3" type="audio/mpeg">
-</audio>
-                    <input type="checkbox"  id="CRTswitch" onclick="play()" checked>
-<label for="CRTswitch" class="switch-label">Turn </label>
-	<div class="CRTcontainer">
-        
-        <div class ="screen">
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebApplication1</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PlayerPage">PlayerPage</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DungeonMasterSuite">DungeonMasterSuite</a>
-                        </li>
-                        <li class="nav-item showables">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Compendium">Compendium</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="brickContainer">
-        <div class="container">
+
+<body class="bg-dark h-100">
+    <audio id="turnOnSound" autoplay>
+        <source src="../images/turnOn.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="turnOffSound">
+        <source src="../images/turnOff.mp3" type="audio/mpeg">
+    </audio>
+    <input type="checkbox" id="CRTswitch" onclick="play()" checked>
+    <label for="CRTswitch" class="switch-label">Turn </label>
+    <div class="CRTcontainer">
+
+        <div class="screen">
+            <header>
+                <nav
+                    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebApplication1</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                        asp-action="Index">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                        asp-action="PlayerPage">PlayerPage</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                        asp-action="DungeonMasterSuite">DungeonMasterSuite</a>
+                                </li>
+                                <li class="nav-item showables">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                        asp-action="Compendium">Compendium</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                        asp-action="Privacy">Privacy</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
             <main role="main" class="pb-3">
                 @RenderBody()
             </main>
-        </div>
-    </div>
-<div id="butt"></div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - WebApplication1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <footer class="border-top footer py-5 mt-4 text-muted">
+                <div class="container">
+                    &copy; 2024 - WebApplication1 - <a asp-area="" asp-controller="Home"
+                        asp-action="Privacy">Privacy</a>
+                </div>
+            </footer>
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="~/js/site.js" asp-append-version="true"></script>
+            @await RenderSectionAsync("Scripts", required: false)
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-    </div>
-    <div class="overlay">AV-1</div>
+        <div class="overlay">AV-1</div>
     </div>
 </body>
+
 </html>
