--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -1,27 +1,39 @@
-﻿
-@{
-    ViewData["Title"] = "View";
+﻿@{
+ViewData["Title"] = "View";
 }
 
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>View</title>
 </head>
+
 <body class="dmsuite">
-    <div class="left-wrapper debugg">
-        <div class="flex-wrapper">
-            <nav class="dm-nav">
-                <a>New Page</a>
-                <a>Edit Page</a>
-                <a>View Page</a>
-                <a>Char Sheets</a>
-            </nav>
-            
+    <nav class="dm-nav navbar navbar-expand-lg bg-light navbar-light">
+
+        <div class="container">
+
+            <button type="button" class="navbar-toggler float-end ms-auto" type="button" data-bs-toggle="collapse"
+                data-bs-target="#designTaskBar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="designTaskBar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="px-lg-5 nav-link" href="">New Page</a></li>
+                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">Edit Page</a></li>
+                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">View Page</a></li>
+                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">Char Sheets</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="left-wrapper debugg px-xl-5 p-sm-3 p-2">
+        <div class="flex-wrapper col">
             <div class="debugg options">
-                <div class= "name-card">
+                <div class="name-card">
                     <input type="text" placeholder="Website Name" id="wname" name="wname">
                 </div>
                 <div class="debugg options-A">
@@ -32,35 +44,40 @@
                         <option value="3">Three</option>
                         <option value="4">Four</option>
                         <option value="5">Five</option>
-                      </select>
-                      <div class="thumbnail">
-                          <img src="../images/square.png"/>
-                          <button>Upload</button>
-                      </div>
+                    </select>
+                    <div class="thumbnail">
+                        <img src="../images/square.png" />
+                        <button>Upload</button>
+                    </div>
                 </div>
                 <div class="debugg options-B">
                     <div class="grid-parent">
                         <div class="debugg flex-row">
                             <div class="square">
-                                <input type="color" class="colorInput prim" value="#c14444" input="colorChoice()"></input>
+                                <input type="color" class="colorInput prim" value="#c14444"
+                                    input="colorChoice()"></input>
                             </div>
-                             <input type="text" placeholder="Primary" id="pcol" class="col-text" name="pcol">
+                            <input type="text" placeholder="Primary" id="pcol" class="col-text" name="pcol">
                         </div>
                         <div class="debugg flex-row">
                             <div class="square">
-                                <input type="color" class="colorInput seco" value="#46afad" input="colorChoice()"></input>
+                                <input type="color" class="colorInput seco" value="#46afad"
+                                    input="colorChoice()"></input>
                             </div>
-                             <input type="text" placeholder="Secondary" id="scol" class="col-text" name="scol">
+                            <input type="text" placeholder="Secondary" id="scol" class="col-text" name="scol">
                         </div>
                         <div class="debugg flex-row">
                             <div class="square">
-                                <input type="color" class="colorInput tert" value="#af9a0d" input="colorChoice()"></input>
+                                <input type="color" class="colorInput tert" value="#af9a0d"
+                                    input="colorChoice()"></input>
                             </div>
-                             <input type="text" placeholder="Tertiary" id="tcol" class="col-text" name="tcol" value="#af9a0d">
+                            <input type="text" placeholder="Tertiary" id="tcol" class="col-text" name="tcol"
+                                value="#af9a0d">
                         </div>
                         <div class="debugg switchy-wrap">
                             <div class="form-check form-switch switchy">
-                                <input class="form-check-input" type="checkbox" role="switch"  id="playerVisSwit" checked>
+                                <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
+                                    checked>
                                 <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
                             </div>
                         </div>
@@ -80,4 +97,5 @@
         <img />
     </div>
 </body>
+
 </html>
