--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -12,89 +12,91 @@ ViewData["Title"] = "View";
 </head>
 
 <body class="dmsuite">
-    <nav class="dm-nav navbar navbar-expand-lg bg-light navbar-light">
-
-        <div class="container">
-
-            <button type="button" class="navbar-toggler float-end ms-auto" type="button" data-bs-toggle="collapse"
-                data-bs-target="#designTaskBar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="designTaskBar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="px-lg-5 nav-link" href="">New Page</a></li>
-                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">Edit Page</a></li>
-                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">View Page</a></li>
-                    <li class="nav-item"><a class="px-lg-5 nav-link" href="">Char Sheets</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="left-wrapper debugg px-xl-5 p-sm-3 p-2">
-        <div class="flex-wrapper col">
-            <div class="debugg options">
-                <div class="name-card">
-                    <input type="text" placeholder="Website Name" id="wname" name="wname">
-                </div>
-                <div class="debugg options-A">
-                    <select class="lay-sel">
-                        <option value="" selected disabled hidden>Choose here</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                    </select>
-                    <div class="thumbnail">
-                        <img src="../images/square.png" />
-                        <button>Upload</button>
+    <div class="row-1 d-flex bg-light">
+        <div class="left-wrapper debugg  col-8">
+            <nav class="dm-nav navbar navbar-expand-lg bg-light navbar-light col-8">
+                <div class="container">
+                    <button type="button" class="navbar-toggler float-end ms-auto btn btn-primary" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#designTaskBar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse " id="designTaskBar">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item active"><a class="px-lg-5 nav-link" href="">New Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">Edit Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">View Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">Char Sheets</a></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="debugg options-B">
-                    <div class="grid-parent">
-                        <div class="debugg flex-row">
-                            <div class="square">
-                                <input type="color" class="colorInput prim" value="#c14444"
-                                    input="colorChoice()"></input>
-                            </div>
-                            <input type="text" placeholder="Primary" id="pcol" class="col-text" name="pcol">
-                        </div>
-                        <div class="debugg flex-row">
-                            <div class="square">
-                                <input type="color" class="colorInput seco" value="#46afad"
-                                    input="colorChoice()"></input>
-                            </div>
-                            <input type="text" placeholder="Secondary" id="scol" class="col-text" name="scol">
-                        </div>
-                        <div class="debugg flex-row">
-                            <div class="square">
-                                <input type="color" class="colorInput tert" value="#af9a0d"
-                                    input="colorChoice()"></input>
-                            </div>
-                            <input type="text" placeholder="Tertiary" id="tcol" class="col-text" name="tcol"
-                                value="#af9a0d">
-                        </div>
-                        <div class="debugg switchy-wrap">
-                            <div class="form-check form-switch switchy">
-                                <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
-                                    checked>
-                                <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
+            </nav>
+
+            <div class="flex-wrapper col px-xl-5 p-sm-3 p-2">
+                <div class="debugg options">
+                    <div class="name-card py-4">
+                        <input type="text" class="p-3 display-6 rounded-custom border-dark" placeholder="Website Name"
+                            id="wname" name="wname">
+                    </div>
+                    <div class="row">
+                        <div class="debugg options-A col-6 ">
+                            <select class="lay-sel form-select form-select-lg border-dark">
+                                <option class = value="" selected disabled hidden>Choose here</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                <option value="4">Four</option>
+                                <option value="5">Five</option>
+                            </select>
+                            <div class="thumbnail d-flex flex-column">
+                                <img class="" src="../images/square.png" />
+                                <button class="btn btn-primary w-75 py-3 mx-auto">Upload</button>
                             </div>
                         </div>
-                        <div class="debugg switchy-wrap">
-                            <div class="form-check form-switch switchy">
-                                <input class="form-check-input " type="checkbox" role="switch" id="compVisSwit" checked>
-                                <label class="form-check-label" for="compVisSwit">Visible from Home Page</label>
+                        <div class="debugg options-B col-6">
+                            <div class="grid-parent d-flex flex-column">
+                                <div class="debugg d-flex flex-row p-4 h2">
+                                        <input type="color" class="colorInput prim square" value="#c14444"
+                                            input="colorChoice()"></input>
+                                    <input type="text" placeholder="Primary" id="pcol" class="col-text" name="pcol">
+                                </div>
+                                <div class="debugg d-flex flex-row p-4 h2">
+                                    <input type="color" class="colorInput seco square" value="#46afad"
+                                        input="colorChoice()"></input>
+                                    <input type="text" placeholder="Secondary" id="scol" class="col-text" name="scol">
+                                </div>
+                                <div class="debugg d-flex flex-row p-4 h2">
+                                        <input type="color" class="colorInput tert square" value="#af9a0d"
+                                            input="colorChoice()"></input>
+                                    <input type="text" placeholder="Tertiary" id="tcol" class="col-text" name="tcol"
+                                        value="#af9a0d">
+                                </div>
+                                <div class="debugg switchy-wrap">
+                                    <div class="form-check form-switch switchy">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
+                                            checked>
+                                        <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
+                                    </div>
+                                </div>
+                                <div class="debugg switchy-wrap">
+                                    <div class="form-check form-switch switchy">
+                                        <input class="form-check-input " type="checkbox" role="switch" id="compVisSwit"
+                                            checked>
+                                        <label class="form-check-label" for="compVisSwit">Visible from Home Page</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="right-wrapper debugg flex-wrapper">
-        <button>Upload</button>
-        <img />
+
+        <div class="right-wrapper debugg flex-wrapper float-right col-4">
+            <button class="btn btn-primary">Upload</button>
+            <div class="square ">
+                <img src="" alt="">
+            </div>
+        </div>
     </div>
 </body>
 
