--- a/WebApplication1/Views/Home/Compendium.cshtml
+++ b/WebApplication1/Views/Home/Compendium.cshtml
@@ -1,49 +1,60 @@
-﻿
-@{
-    ViewData["Title"] = "View";
+﻿@{
+ViewData["Title"] = "View";
 }
 
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width" />
     <title>Compendium</title>
 </head>
+
 <body class="comp">
-    <div class="propWrapper hideables">
-        <div class="shine-wrapper hideables">
-            <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/512/"/>
-            <div class="shine hideables"></div>
-        </div>
-    </div>
-
-    <div class="cWrapper">
-        <h1>COMPENDIU<span style="letter-spacing:0;">M</span></h1>
-        <!--^^^^Grosssssssss-->
-        <div class="search-wrapper">
-            <input type="text" placeholder="Search.." id="comp-search">
-            <button type="submit" onclick="populateFakeData()"><i class="fa fa-search"></i></button>
-        </div>
-        <div class="overflow-wrapper comp-scroll-box">
-            <!--DELETE THIS LATER-->
-            <div class = "comp-item"> 
-                <img src="https://fakeimg.pl/512/">
-                <div class="item-text">
-                    <h2>Website Name</h2>
-                    <p>Description</p>
-                </div>
+    <div class="d-flex row gx-3">
+        <div class="propWrapper hideables col-2">
+            <div class="shine-wrapper hideables">
+                <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/512/" />
+                <div class="shine hideables"></div>
             </div>
-           
-
-            <!--END OF CONTENT-->
         </div>
-    </div>
 
-    <div class="propWrapper hideables halfw">
-        <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/300/"/>
-        <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/300/"/>
+        <div class="cWrapper col-8 d-flex flex-column align-items-center py-3">
+            <h1 style="letter-spacing: 0.5em;">COMPENDIU<span style="letter-spacing:0;">M</span></h1>
+            <!--^^^^Grosssssssss-->
+            <div class="form-outline" data-mdb-input-init>
+    <input type="search" id="form1" class="form-control" />
+    <label class="form-label" for="form1">Search</label>
+  </div>
+  <button type="button" class="btn btn-primary" data-mdb-ripple-init>
+    <i class="fas fa-search"></i>
+  </button>
+            <div class="search-wrapper">
+                <input type="text" placeholder="Search.." id="comp-search">
+                <button type="submit" onclick="populateFakeData()"><i class="fa fa-search"></i></button>
+            </div>
+            
+            <div class="overflow-scroll comp-scroll-box border-light border w-100 p-3">
+                <!--DELETE THIS LATER-->
+                <div class="comp-item">
+                    <img src="https://fakeimg.pl/512/">
+                    <div class="item-text">
+                        <h2>Website Name</h2>
+                        <p>Description</p>
+                    </div>
+                </div>
+
+                <!--END OF CONTENT-->
+            </div>
+        </div>
+
+        <div class="propWrapper hideables col-2">
+            <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/300/" />
+            <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/300/" />
+        </div>
     </div>
 </body>
+
 </html>
