--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -33,14 +33,14 @@ ViewData["Title"] = "View";
 
             <div class="flex-wrapper col px-xl-5 p-sm-3 p-2">
                 <div class="debugg options">
-                    <div class="name-card py-4">
-                        <input type="text" class="p-3 display-6 rounded-custom border-dark" placeholder="Website Name"
-                            id="wname" name="wname">
+                    <div class="name-card pb-4">
+                        <input type="text" class="p-3 display-6 rounded-custom border-dark fw-bold"
+                            placeholder="Website Name" id="wname" name="wname">
                     </div>
                     <div class="row">
                         <div class="debugg options-A col-6 ">
                             <select class="lay-sel form-select form-select-lg border-dark">
-                                <option class = value="" selected disabled hidden>Choose here</option>
+                                <option class=value="" selected disabled hidden>Choose here</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
@@ -49,35 +49,37 @@ ViewData["Title"] = "View";
                             </select>
                             <div class="thumbnail d-flex flex-column">
                                 <img class="" src="../images/square.png" />
-                                <button class="btn btn-primary w-75 py-3 mx-auto">Upload</button>
+                                <button class="btn btn-primary w-75 py-3 mx-auto">Upload Thumbnail</button>
                             </div>
                         </div>
                         <div class="debugg options-B col-6">
                             <div class="grid-parent d-flex flex-column">
                                 <div class="debugg d-flex flex-row p-4 h2">
-                                        <input type="color" class="colorInput prim square" value="#c14444"
-                                            input="colorChoice()"></input>
-                                    <input type="text" placeholder="Primary" id="pcol" class="col-text" name="pcol">
-                                </div>
-                                <div class="debugg d-flex flex-row p-4 h2">
-                                    <input type="color" class="colorInput seco square" value="#46afad"
+                                    <input type="color" class="colorInput prim" value="#c14444"
                                         input="colorChoice()"></input>
-                                    <input type="text" placeholder="Secondary" id="scol" class="col-text" name="scol">
+                                    <input type="text" placeholder="Primary" id="pcol" class="col-text input-custom"
+                                        name="pcol">
                                 </div>
                                 <div class="debugg d-flex flex-row p-4 h2">
-                                        <input type="color" class="colorInput tert square" value="#af9a0d"
-                                            input="colorChoice()"></input>
-                                    <input type="text" placeholder="Tertiary" id="tcol" class="col-text" name="tcol"
-                                        value="#af9a0d">
+                                    <input type="color" class="colorInput seco" value="#46afad"
+                                        input="colorChoice()"></input>
+                                    <input type="text" placeholder="Secondary" id="scol" class="col-text input-custom"
+                                        name="scol">
                                 </div>
-                                <div class="debugg switchy-wrap">
+                                <div class="debugg d-flex flex-row p-4 h2">
+                                    <input type="color" class="colorInput tert" value="#af9a0d"
+                                        input="colorChoice()"></input>
+                                    <input type="text" placeholder="Tertiary" id="tcol" class="col-text input-custom"
+                                        name="tcol" value="#af9a0d">
+                                </div>
+                                <div class="debugg d-flex flex-row p-4 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
                                             checked>
                                         <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
                                     </div>
                                 </div>
-                                <div class="debugg switchy-wrap">
+                                <div class="debugg d-flex flex-row p-4 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input " type="checkbox" role="switch" id="compVisSwit"
                                             checked>
@@ -91,8 +93,8 @@ ViewData["Title"] = "View";
             </div>
         </div>
 
-        <div class="right-wrapper debugg flex-wrapper float-right col-4">
-            <button class="btn btn-primary">Upload</button>
+        <div class="debugg float-right col-4 d-flex flex-column">
+            <button class="btn btn-primary mx-5 my-2 p-3">Publish Skeleton</button>
             <div class="square ">
                 <img src="" alt="">
             </div>
