--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -31,7 +31,7 @@ ViewData["Title"] = "View";
                 </div>
             </nav>
 
-            <div class="flex-wrapper col px-xl-5 p-sm-3 p-2">
+            <div class="flex-wrapper col ps-xl-5 p-sm-3 p-2  ">
                 <div class="debugg options">
                     <div class="name-card pb-4">
                         <input type="text" class="p-3 display-6 rounded-custom border-dark fw-bold"
@@ -40,7 +40,7 @@ ViewData["Title"] = "View";
                     <div class="row">
                         <div class="debugg options-A col-6 ">
                             <select class="lay-sel form-select form-select-lg border-dark">
-                                <option class=value="" selected disabled hidden>Choose here</option>
+                                <option value="" selected disabled hidden>Choose here</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
@@ -54,32 +54,33 @@ ViewData["Title"] = "View";
                         </div>
                         <div class="debugg options-B col-6">
                             <div class="grid-parent d-flex flex-column">
-                                <div class="debugg d-flex flex-row p-4 h2">
+                                <div class="debugg d-flex flex-row p-3 px-2 h2">
                                     <input type="color" class="colorInput prim" value="#c14444"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Primary" id="pcol" class="col-text input-custom"
                                         name="pcol">
+                                        </input>
                                 </div>
-                                <div class="debugg d-flex flex-row p-4 h2">
+                                <div class="debugg d-flex flex-row p-3 px-2 h2">
                                     <input type="color" class="colorInput seco" value="#46afad"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Secondary" id="scol" class="col-text input-custom"
                                         name="scol">
                                 </div>
-                                <div class="debugg d-flex flex-row p-4 h2">
+                                <div class="debugg d-flex flex-row p-3 px-2 h2">
                                     <input type="color" class="colorInput tert" value="#af9a0d"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Tertiary" id="tcol" class="col-text input-custom"
                                         name="tcol" value="#af9a0d">
                                 </div>
-                                <div class="debugg d-flex flex-row p-4 h3">
+                                <div class="debugg d-flex flex-row p-3 px-2 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
                                             checked>
                                         <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
                                     </div>
                                 </div>
-                                <div class="debugg d-flex flex-row p-4 h3">
+                                <div class="debugg d-flex flex-row p-3 px-2 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input " type="checkbox" role="switch" id="compVisSwit"
                                             checked>
