--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -37,9 +37,33 @@ main{
     background-color: darkgrey;
     margin-right: 15px;
 }
+.btn-square-md {
+width: 50px !important;
+max-width: 100% !important;
+max-height: 100% !important;
+height: 50px !important;
+text-align: center;
+padding: 0px;
+aspect-ratio: 1 / 1;
+}
 .colorInput{
   height: 75px;
   width: 75px;
+}
+
+.comp-scroll-box{
+  max-height: 68vh !important;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.comp-scroll-box::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.comp-scroll-box{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .input-custom{
