--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,15 +10,18 @@ ViewData["Title"] = "Home Page";
     <title>GURPS Client</title>
 </head>
 
+<h1>Color Test</h1>
 <body class="colorTest">
     <div class="container d-flex">
         <div>
+            <h1>Normal</h1>
             <img class="img-fluid w-100" src="../images/colortest1.jpeg" />
             <img class="img-fluid w-100" src="../images/colortest2.jpeg" />
             <img class="img-fluid w-100" src="../images/colortest3.jpeg" />
             <img class="img-fluid w-100" src="../images/colortest4.jpeg" />
         </div>
         <div class="cAdjust">
+            <h1>Adjusted</h1>
             <img class="img-fluid w-100" src="../images/colortest1.jpeg" />
             <img class="img-fluid w-100" src="../images/colortest2.jpeg" />
             <img class="img-fluid w-100" src="../images/colortest3.jpeg" />
