Added cool cursor effect

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -16,6 +16,8 @@ ViewData["Title"] = "Home Page";
     }
   }
 </script>
+    
+    <link rel="stylesheet" href="~/css/infocursor.css" asp-append-version="true" />
 </head>
 
 <body class="colorTest" onload="showtime()">
