--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </head>
+
 
 <body class="bg-dark h-100">
     <audio id="turnOnSound" autoplay>
@@ -20,9 +23,13 @@
     </audio>
     <input type="checkbox" id="CRTswitch" onclick="play(); showtime();" checked>
     <label for="CRTswitch" class="switch-label">Turn </label>
+    
     <div class="CRTcontainer">
-
         <div class="screen">
+        <div class="cursor">
+                <div class="cursor-1"></div>
+                <div class="cursor-2"></div>
+            </div>
             <header>
                 <nav
                     class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light bg-white border-bottom box-shadow mb-3">
@@ -82,6 +89,7 @@
                         </div>
                 </div>
             </footer>
+            <script src="~/js/mouse.js"></script>
             <script src="~/lib/jquery/dist/jquery.min.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
