--- a/WebApplication1/Views/Home/Compendium.cshtml
+++ b/WebApplication1/Views/Home/Compendium.cshtml
@@ -16,7 +16,7 @@ ViewData["Title"] = "View";
     <div class="d-flex row gx-3 vh-100 justify-content-center">
         <div class="propWrapper hideables overflow-hidden d-none d-sm-block col-2">
             <div class="shine-wrapper hideables">
-                <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/512/" />
+                <img id="" class="hideables" src="https://fakeimg.pl/512/" />
                 <div class="shine hideables"></div>
             </div>
         </div>
