--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -39,7 +39,7 @@ ViewData["Title"] = "View";
                     </div>
                     <div class="row">
                         <div class="debugg options-A col-12 col-md-6 ">
-                            <select class="lay-sel form-select form-select-lg border-dark">
+                            <select class="lay-sel form-select border-dark h3">
                                 <option value="" selected disabled hidden>Choose here</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
@@ -54,20 +54,20 @@ ViewData["Title"] = "View";
                         </div>
                         <div class="debugg options-B col-12 col-md-6 ">
                             <div class="grid-parent d-flex flex-column">
-                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h3">
                                     <input type="color" class="colorInput prim" value="#c14444"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Primary" id="pcol" class="col-text input-custom"
                                         name="pcol">
                                         </input>
                                 </div>
-                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h3">
                                     <input type="color" class="colorInput seco" value="#46afad"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Secondary" id="scol" class="col-text input-custom"
                                         name="scol">
                                 </div>
-                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h3">
                                     <input type="color" class="colorInput tert" value="#af9a0d"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Tertiary" id="tcol" class="col-text input-custom"
