--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -1,4 +1,10 @@
 
+body{
+  max-width: 2235px;
+  margin: 0px auto;
+}
+
+
 
 .cursor{
   display: none;
@@ -31,6 +37,7 @@ html{
 
 .cube, .OStxt, .GCAT{
   transition: all 3s, opacity 2s;
+  max-width: 1000px;
 }
 
 .reset{
@@ -124,13 +131,13 @@ aspect-ratio: 1 / 1;
 }
 
 .custom-lg{
- font-size: calc(1.375rem + 1.5vw);
+ font-size: min(calc(1.375rem + 1.5vw), 50px);
     font-weight: 300;
     line-height: 1.2;
 }
 
 .custom-xl{
- font-size: calc(1.375rem + 7vw);
+ font-size: min(calc(1.375rem + 7vw), 180px);
     font-weight: 300;
     line-height: 1.2;
 }
